# nucleus-interpreter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
documentation/: GC.md  GC1.md  GC2.md  Nucleus_Interpreter_GC1.md  Nucleus_Interpreter_GC_Type.md  Region-based_memory_management.md
test/: CMakeLists.txt
test/Context/: CMakeLists.txt
test/ScratchSpace/: CMakeLists.txt
test/String/: CMakeLists.txt
test/StringBuffer/: CMakeLists.txt
test/StringBuffer/src/Nucleus.Interpreter.Test.StringBuffer/: main.c
test/StringIterator/: CMakeLists.txt
test/getFileContents/: CMakeLists.txt
test/setFileContents/: CMakeLists.txt
test/stringToInteger/: CMakeLists.txt
test/stringToInteger/src/Nucleus.Interpreter.Test.stringToInteger/: main.c
tools/: CMakeLists.txt
tools/Generator/: CMakeLists.txt
tools/Unicode/: CMakeLists.txt
